--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,37 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="ebac">
             <p class="hero__text">
-                Happy birthday começa em 01 11 2024
+                aniversariante do mes de novembro começa em <span id="contador"></span>
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>localização</b>
+                        Rua domingo - Pradópolis - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>quando</b>
+                        01/11/2024 às 19H
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">
+                    Garanta seu convite
+                </a>
+            </div>
         </div>
     </header>
+
+    <section class="event">
+        <div class="container">
+            <div class="event__detail">
+                <h2 class="event__detail__title">bolo</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nisi voluptatibus eius quod, ducimus tempore ut obcaecati! Illum voluptate pariatur nam esse similique earum recusandae deserunt rem quo saepe. Modi.
+                </p>
+            </div>
+            <img class="event__image" src="./images/bolo_festa.jpg" alt="bolo_festa">
+        </div>
+    </section>
 
     <script src="./scripts/main.js"></script>
 </body>
