--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="ebac">
             <p class="hero__text">
-                aniversariante do mes de novembro começa em <span id="contador"></span>
+                Venha comemorar comigo,começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -35,8 +36,8 @@
         </div>
     </header>
 
-    <section class="event">
-        <div class="container">
+    <section class="event event--cake">
+        <div class="container" data-aos="fade-right">
             <div class="event__detail">
                 <h2 class="event__detail__title">bolo</h2>
                 <p class="event__detail__description">
@@ -47,6 +48,42 @@
         </div>
     </section>
 
+    <section class="event event--fest event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Festa</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nisi voluptatibus eius quod, ducimus tempore ut obcaecati! Illum voluptate pariatur nam esse similique earum recusandae deserunt rem quo saepe. Modi.
+                </p>
+            </div>
+            <img class="event__image" src="./images/bolo_festa.jpg" alt="festa">
+        </div>
+    </section>
+
+    <section class="event event--local">
+        <div class="container"  data-aos="fade-right">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Local</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nisi voluptatibus eius quod, ducimus tempore ut obcaecati! Illum voluptate pariatur nam esse similique earum recusandae deserunt rem quo saepe. Modi.
+                </p>
+            </div>
+            <img class="event__image" src="./images/bolo_festa.jpg" alt="bolo_festa">
+        </div>
+    </section>
+
+    <section class="event event--celebration event--image-left">
+        <div class="container"  data-aos="fade-left">
+            <div class="event__detail">
+                <h2 class="event__detail__title">celebração</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nisi voluptatibus eius quod, ducimus tempore ut obcaecati! Illum voluptate pariatur nam esse similique earum recusandae deserunt rem quo saepe. Modi.
+                </p>
+            </div>
+            <img class="event__image" src="./images/bolo_festa.jpg" alt="bolo_festa">
+        </div>
+    </section>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
